nav bar icons, signin and signup

--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@react-navigation/stack": "^6.3.2",
     "expo": "~46.0.13",
+    "expo-env-info": "^1.0.5",
+    "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "^0.69.6",
@@ -21,7 +25,8 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.17.0",
-    "react-native-svg": "^13.2.0"
+    "react-native-svg": "12.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
