--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "expo-font": "~10.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "18.0.0",
     "react-instantsearch-hooks": "^6.36.0",
     "react-instantsearch-native": "^6.36.0",
     "react-native": "^0.69.6",
+    "react-native-currency-input": "^1.0.1",
     "react-native-dotenv": "^3.3.1",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-reanimated": "~2.9.1",
