--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-dropdownalert": "^4.5.1",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.4.1",
