--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "algoliasearch": "^4.14.2",
     "axios": "^1.2.0",
     "babel-plugin-dotenv-import": "^3.0.1",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "react": "18.1.0",
+    "react-instantsearch-hooks": "^6.38.1",
     "react-native": "0.70.6",
     "react-native-dropdownalert": "^4.5.1",
     "react-native-image-crop-picker": "^0.38.1",
