--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "react-instantsearch-hooks": "^6.38.1",
     "react-native": "0.70.6",
     "react-native-dropdownalert": "^4.5.1",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-size-matters": "^0.4.0",
