--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.8",
     "@reduxjs/toolkit": "^1.9.0",
     "algoliasearch": "^4.14.2",
     "axios": "^1.2.0",
