--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 API=http://dev.lootswap.com:8000/api
+AlgoliaAppId=O616IHS8SQ
+AlgoliaApiKey=1a61d9059fcc3f918576c7aa95279846
+ALGOLIA_INDEX_NAME=dev_lootswap
