--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "styled-system": "^5.1.5",
     "yarn": "^1.22.19",
