--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 API=http://dev.lootswap.com:8000/api
+SOCKET_API==http://45.33.9.139:8000
 AlgoliaAppId=O616IHS8SQ
 AlgoliaApiKey=1a61d9059fcc3f918576c7aa95279846
 ALGOLIA_INDEX_NAME=dev_lootswap
