--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-instantsearch-hooks": "^6.38.1",
     "react-native": "0.70.6",
     "react-native-dropdownalert": "^4.5.1",
+    "react-native-element-dropdown": "^2.5.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-crop-picker": "^0.38.1",
