--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "^4.4.1",
@@ -42,6 +44,7 @@
     "react-native-spinkit": "^1.5.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.6.0",
+    "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
