--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.1.0",
     "react-instantsearch-hooks": "^6.38.1",
     "react-native": "0.70.6",
+    "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-dropdownalert": "^4.5.1",
     "react-native-element-dropdown": "^2.5.1",
     "react-native-gesture-handler": "^2.8.0",
