--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-searchable-dropdown": "^1.1.3",
     "react-native-size-matters": "^0.4.0",
     "react-native-spinkit": "^1.5.1",
     "react-native-splash-screen": "^3.3.0",
