--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.8",
     "@reduxjs/toolkit": "^1.9.0",
+    "@stripe/stripe-react-native": "^0.23.0",
     "add": "^2.0.6",
     "algoliasearch": "^4.14.2",
     "axios": "^1.2.0",
