--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-dotenv-import": "^3.0.1",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-instantsearch-hooks": "^6.38.1",
     "react-native": "0.70.6",
