Changes on Home, Product screen

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-collapsible": "^1.6.0",
     "react-native-dashed-line": "^1.1.0",
+    "react-native-dots-pagination": "^0.2.0",
     "react-native-dropdownalert": "^4.5.1",
     "react-native-element-dropdown": "^2.5.1",
     "react-native-gesture-handler": "^2.8.0",
