--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.1.2",
     "react-native-print": "^0.11.0",
