--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-native-collapsible": "^1.6.0",
     "react-native-dashed-line": "^1.1.0",
     "react-native-dots-pagination": "^0.2.0",
+    "react-native-draggable-flatlist": "^4.0.0",
     "react-native-dropdownalert": "^4.5.1",
     "react-native-element-dropdown": "^2.5.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-crop-picker": "^0.38.1",
