--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "android:dev-release": "react-native run-android --variant=developmentrelease",
     "android:prod": "react-native run-android --variant=productiondebug",
     "android:prod-release": "react-native run-android --variant=productionrelease",
-    "ios:dev": "react-native run-ios --scheme 'lootswap_mobile'",
-    "ios:prod": "react-native run-ios --scheme 'lootswap_mobile-development'"
+    "ios:prod": "react-native run-ios --scheme 'lootswap_mobile'",
+    "ios:dev": "react-native run-ios --scheme 'lootswap_mobile-development'"
 
   },
   "dependencies": {
