build and publish

--- a/ios/lootswap_mobile.xcodeproj/xcshareddata/xcschemes/lootswap_mobile.xcscheme
+++ b/ios/lootswap_mobile.xcodeproj/xcshareddata/xcschemes/lootswap_mobile.xcscheme
@@ -59,7 +59,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -78,6 +78,10 @@
             ReferencedContainer = "container:lootswap_mobile.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
