--- a/ios/lootswap_mobile/Info.plist
+++ b/ios/lootswap_mobile/Info.plist
@@ -91,6 +91,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
