--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "android:prod-release": "react-native run-android --variant=productionrelease",
     "ios:prod": "react-native run-ios --scheme 'lootswap_mobile'",
     "ios:dev": "react-native run-ios --scheme 'lootswap_mobile_development'"
-
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
@@ -50,6 +49,7 @@
     "react-native-element-dropdown": "^2.5.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-haptic-feedback": "^2.0.2",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-inappbrowser-reborn": "^3.7.0",
