--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'lootswap_mobile' do
   # Flags change depending on the env values.
   flags = get_default_flags()
 
+  pod 'Branch'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
