--- a/ios/lootswap_mobile/Info.plist
+++ b/ios/lootswap_mobile/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>branch_key</key>
+  <string>key_live_jEamaZKNTexdgJKLbnMRogabtBohkxku</string>
+  <key>branch_app_domain</key>
+  <string>lootswap.app.link</string>
+  <key>CFBundleURLTypes</key>
+  <array>
+    <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>yourapp.</string>
+      </array>
+    </dict>
+  </array>
+  
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
