--- a/ios/lootswap_mobile/lootswap_mobile.entitlements
+++ b/ios/lootswap_mobile/lootswap_mobile.entitlements
@@ -4,5 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:lootswap.app.link</string>
+		<string>applinks:lootswap-alternate.app.link</string>
+	</array>
 </dict>
 </plist>
