--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-firebase/app": "^17.0.0",
     "@react-native-firebase/messaging": "^17.0.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
