--- a/ios/lootswap_mobile/lootswap_mobile.entitlements
+++ b/ios/lootswap_mobile/lootswap_mobile.entitlements
@@ -9,5 +9,9 @@
 		<string>applinks:lootswap.app.link</string>
 		<string>applinks:lootswap-alternate.app.link</string>
 	</array>
+	<key>com.apple.developer.in-app-payments</key>
+	<array>
+		<string>merchant.com.lootswap.lootswap-mobile</string>
+	</array>
 </dict>
 </plist>
