--- a/ios/lootswap_mobile_development-Info.plist
+++ b/ios/lootswap_mobile_development-Info.plist
@@ -59,6 +59,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Black.otf</string>
+		<string>Mont-Heavy.ttf</string>
 		<string>Inter-Bold.otf</string>
 		<string>Inter-Light.otf</string>
 		<string>Urbanist-Black.ttf</string>
