--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "android:prod": "react-native run-android --variant=productiondebug",
     "android:prod-release": "react-native run-android --variant=productionrelease",
     "ios:prod": "react-native run-ios --scheme 'lootswap_mobile'",
-    "ios:dev": "react-native run-ios --scheme 'lootswap_mobile_development'"
+    "ios:dev": "react-native run-ios --scheme 'lootswap_mobile_development' --simulator='iPhone 14 Plus'"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
