--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "android:prod": "react-native run-android --variant=productiondebug",
     "android:prod-release": "react-native run-android --variant=productionrelease",
     "ios:prod": "react-native run-ios --scheme 'lootswap_mobile'",
-    "ios:dev": "react-native run-ios --scheme 'lootswap_mobile_development' --simulator='iPhone 14'"
+    "ios:dev": "react-native run-ios --scheme 'lootswap_mobile_development' --simulator='iPhone 14 Pro Max'"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.5",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-camera-roll/camera-roll": "^5.6.0",
     "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-native-firebase/app": "^17.0.0",
     "@react-native-firebase/messaging": "^17.0.0",
