--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@stripe/stripe-react-native": "^0.23.0",
     "add": "^2.0.6",
     "algoliasearch": "^4.14.2",
+    "appcenter": "4.4.5",
+    "appcenter-analytics": "4.4.5",
+    "appcenter-crashes": "4.4.5",
     "axios": "^1.2.0",
     "babel-plugin-dotenv-import": "^3.0.1",
     "formik": "^2.2.9",
