--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native": "0.70.6",
     "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-branch": "5.7.0",
+    "react-native-code-push": "^8.0.2",
     "react-native-collapsible": "^1.6.0",
     "react-native-config": "^1.5.0",
     "react-native-dashed-line": "^1.1.0",
