--- a/ios/lootswap_mobile_development-Info.plist
+++ b/ios/lootswap_mobile_development-Info.plist
@@ -33,6 +33,8 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1.5.1</string>
+	<key>CodePushDeploymentKey</key>
+	<string>MLSTmi_7H9-wh-ijIcugIAywADZr5_QT5QA8r</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
