--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-haptic-feedback": "^2.0.2",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-crop-picker": "^0.38.1",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.2",
