--- a/.env.development
+++ b/.env.development
@@ -7,3 +7,4 @@ StripeApiKey=pk_test_51LkXsLIWF7ezmHy1rgDbwdKLjc6TrFU0ZroSDJZcncMAPSR26hmG86jZMR
 MerchantIdentifier=merchant.com.lootswap.lootswap-mobile
 WEB_APP_URL=http://localhost:3000
 ENV=development
+GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
