--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,4 @@ StripeApiKey=pk_live_51LkXsLIWF7ezmHy1qBipylVXahy6qvnE3NpXy34LnBRFVzcSxMxxeg2TOD
 MerchantIdentifier=merchant.com.lootswap.lootswap-mobile
 WEB_APP_URL=https://lootswap.com
 ENV=production
+GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
