--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-element-dropdown": "^2.5.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-haptic-feedback": "^2.0.2",
     "react-native-heroicons": "^3.2.0",
     "react-native-image-crop-picker": "^0.38.1",
