--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.6.0",
     "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^17.0.0",
     "@react-native-firebase/messaging": "^17.0.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
