--- a/ios/lootswap_mobile/GoogleService-Info-Prod.plist
+++ b/ios/lootswap_mobile/GoogleService-Info-Prod.plist
@@ -2,29 +2,33 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>API_KEY</key>
-	<string>AIzaSyDuNu7olAZMK7P2LsCNGpPjtj6lC74yNHQ</string>
-	<key>GCM_SENDER_ID</key>
-	<string>82288270183</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>org.reactjs.native.example.lootswap-mobile</string>
-	<key>PROJECT_ID</key>
-	<string>lootswap-prod</string>
-	<key>STORAGE_BUCKET</key>
-	<string>lootswap-prod.appspot.com</string>
-	<key>IS_ADS_ENABLED</key>
-	<false></false>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:82288270183:ios:6e6baeb68a65063c622dc2</string>
+  <key>CLIENT_ID</key>
+  <string>82288270183-bnffad6i28k86q8ib136nboc2ulcrno2.apps.googleusercontent.com</string>
+  <key>REVERSED_CLIENT_ID</key>
+  <string>com.googleusercontent.apps.82288270183-bnffad6i28k86q8ib136nboc2ulcrno2</string>
+  <key>API_KEY</key>
+  <string>AIzaSyDuNu7olAZMK7P2LsCNGpPjtj6lC74yNHQ</string>
+  <key>GCM_SENDER_ID</key>
+  <string>82288270183</string>
+  <key>PLIST_VERSION</key>
+  <string>1</string>
+  <key>BUNDLE_ID</key>
+  <string>org.reactjs.native.example.lootswap-mobile</string>
+  <key>PROJECT_ID</key>
+  <string>lootswap-prod</string>
+  <key>STORAGE_BUCKET</key>
+  <string>lootswap-prod.appspot.com</string>
+  <key>IS_ADS_ENABLED</key>
+  <false></false>
+  <key>IS_ANALYTICS_ENABLED</key>
+  <false></false>
+  <key>IS_APPINVITE_ENABLED</key>
+  <true></true>
+  <key>IS_GCM_ENABLED</key>
+  <true></true>
+  <key>IS_SIGNIN_ENABLED</key>
+  <true></true>
+  <key>GOOGLE_APP_ID</key>
+  <string>1:82288270183:ios:6e6baeb68a65063c622dc2</string>
 </dict>
 </plist>
