--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-native-firebase/analytics": "^18.7.1",
     "@react-native-firebase/app": "^18.7.1",
     "@react-native-firebase/messaging": "^18.7.1",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
