Signin with google config

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ MerchantIdentifier=merchant.com.lootswap.lootswap-mobile
 WEB_APP_URL=http://localhost:3000
 ENV=development
 GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
+REVERSED_CLIENT_ID=com.googleusercontent.apps.243371662211-t7qi3edc9cothhrbst7g1jep2ruphm2a
