feat: fetch paypal checkout api call

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API=http://dev.lootswap.com:8000/api
-SOCKET_API=http://dev.lootswap.com:8000
+API=http://localhost:8000/api
+SOCKET_API=http://localhost:8000
 AlgoliaAppId=O616IHS8SQ
 AlgoliaApiKey=1a61d9059fcc3f918576c7aa95279846
 ALGOLIA_INDEX_NAME=dev_lootswap
