--- a/.env.development
+++ b/.env.development
@@ -9,3 +9,4 @@ WEB_APP_URL=http://localhost:3000
 ENV=development
 GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
 REVERSED_CLIENT_ID=com.googleusercontent.apps.243371662211-t7qi3edc9cothhrbst7g1jep2ruphm2a
+PUSHER_API_KEY=ad95a4a4de5d63041683
