--- a/.env.production
+++ b/.env.production
@@ -8,3 +8,4 @@ MerchantIdentifier=merchant.com.lootswap.lootswap-mobile
 WEB_APP_URL=https://lootswap.com
 ENV=production
 GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
+PUSHER_API_KEY=7750de1054293edc8124
