--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-share": "^10.1.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-spinkit": "^1.5.1",
     "react-native-splash-screen": "^3.3.0",
