--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.8",
     "@reduxjs/toolkit": "^1.9.0",
+    "@snapchat/snap-kit-react-native": "^0.4.0",
     "@stripe/stripe-react-native": "^0.23.0",
     "add": "^2.0.6",
     "appcenter": "4.4.5",
@@ -88,6 +89,7 @@
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.8.0",
     "react-native-webview": "^11.26.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
