--- a/ios/lootswap_mobile_development-Info.plist
+++ b/ios/lootswap_mobile_development-Info.plist
@@ -43,6 +43,12 @@
 	<string>2.5.1</string>
 	<key>CodePushDeploymentKey</key>
 	<string>MLSTmi_7H9-wh-ijIcugIAywADZr5_QT5QA8r</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>snapchat</string>
+		<string>bitmoji-sdk</string>
+		<string>itms-apps</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -66,6 +72,12 @@
 	<string>This app does not require access to the microphone.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires access to the photo library.</string>
+	<key>SCSDKClientId</key>
+	<string>561eec20-d054-42a5-890b-1dac90871551
+561eec20-d054-42a5-890b-1dac90871551
+561eec20-d054-42a5-890b-1dac90871551</string>
+	<key>SCSDKRedirectUrl</key>
+	<string>https://lootswap.com</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Black.otf</string>
@@ -103,5 +115,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>URL Types / Document Role</key>
+	<string>Editor</string>
+	<key>URL Types / URL Identifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>URL Types / URL Schemes</key>
+	<string>lootswap</string>
 </dict>
 </plist>
