--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-spinkit": "^1.5.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-story-share": "^0.7.0",
     "react-native-svg": "^13.6.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.3.4",
