meta api key + dleted react native instagram story share

--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,4 @@ ENV=development
 GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
 REVERSED_CLIENT_ID=com.googleusercontent.apps.243371662211-t7qi3edc9cothhrbst7g1jep2ruphm2a
 PUSHER_API_KEY=ad95a4a4de5d63041683
+META_APP_ID=410877518360554
