--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,4 @@ WEB_APP_URL=https://lootswap.com
 ENV=production
 GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
 PUSHER_API_KEY=7750de1054293edc8124
+META_APP_ID=410877518360554
