--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-share": "^10.1.0",
     "react-native-size-matters": "^0.4.0",
+    "react-native-sms": "^1.11.0",
     "react-native-spinkit": "^1.5.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.6.0",
