installed react native share sms + added info.plist for instagram share

--- a/ios/lootswap_mobile/Info.plist
+++ b/ios/lootswap_mobile/Info.plist
@@ -54,6 +54,8 @@
 		<string>bitmoji-sdk</string>
 		<string>snapchat</string>
 		<string>itms-apps</string>
+		<string>instagram-stories</string>
+		<string>mailto</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
