--- a/ios/lootswap_mobile_development-Info.plist
+++ b/ios/lootswap_mobile_development-Info.plist
@@ -51,6 +51,7 @@
 		<string>bitmoji-sdk</string>
 		<string>itms-apps</string>
 		<string>instagram-stories</string>
+		<string>mailto</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
