url scheme name

--- a/ios/lootswap_mobile_development-Info.plist
+++ b/ios/lootswap_mobile_development-Info.plist
@@ -25,10 +25,14 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
-			<key>CFBundleURLName</key>
+			<key>CFBundleURLIconFile</key>
 			<string></string>
+			<key>CFBundleURLName</key>
+			<string>lootswap</string>
 			<key>CFBundleURLSchemes</key>
-			<array/>
+			<array>
+				<string>lootswap</string>
+			</array>
 		</dict>
 		<dict>
 			<key>CFBundleTypeRole</key>
