--- a/ios/lootswap_mobile/Info.plist
+++ b/ios/lootswap_mobile/Info.plist
@@ -31,6 +31,10 @@
 			<array/>
 		</dict>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>lootswap</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>lootswap</string>
