insteadded ux screen session recorder

--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "react-native": "0.70.6",
     "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-branch": "5.7.0",
-    "react-native-clarity": "^2.2.1",
     "react-native-code-push": "^8.0.2",
     "react-native-collapsible": "^1.6.0",
     "react-native-config": "^1.5.0",
@@ -90,6 +89,7 @@
     "react-native-svg": "^13.6.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^3.3.4",
+    "react-native-ux-cam": "^5.4.15",
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-shot": "^3.8.0",
     "react-native-webview": "^11.26.1",
