insteadded ux screen session recorder

--- a/.env.development
+++ b/.env.development
@@ -12,3 +12,4 @@ REVERSED_CLIENT_ID=com.googleusercontent.apps.243371662211-t7qi3edc9cothhrbst7g1
 PUSHER_API_KEY=ad95a4a4de5d63041683
 META_APP_ID=410877518360554
 SHARE_PRODUCT_DOMAIN=http://dev.lootswap.com:8000/api
+UXCAM_API_KEY=xr9v5wxtse38fxw
