--- a/.env.production
+++ b/.env.production
@@ -11,3 +11,4 @@ GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
 PUSHER_API_KEY=7750de1054293edc8124
 META_APP_ID=410877518360554
 SHARE_PRODUCT_DOMAIN=https://share.lootswap.com/api
+UXCAM_API_KEY=9m7866n54ythcfn
