--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-background-fetch": "^4.2.5",
     "react-native-bouncy-checkbox": "^3.0.6",
     "react-native-branch": "5.7.0",
     "react-native-code-push": "^8.0.2",
