--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ MerchantIdentifier=merchant.com.lootswap.lootswap-mobile
 WEB_APP_URL=https://lootswap.com
 ENV=production
 GOOGLE_MAPS_KEY=AIzaSyA9bHrMWPerJwwvmwABTtYXExkm7NNegN0
+PUSHER_API_KEY=7750de1054293edc8124
+META_APP_ID=410877518360554
+SHARE_PRODUCT_DOMAIN=https://share.lootswap.com/api
+UXCAM_API_KEY=9m7866n54ythcfn
