--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-dropdownalert": "^4.5.1",
     "react-native-element-dropdown": "^2.5.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fbsdk-next": "^13.0.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-haptic-feedback": "^2.0.2",
