--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "android:prod": "react-native run-android --variant=productiondebug",
     "android:prod-release": "react-native run-android --variant=productionrelease",
     "ios:prod": "react-native run-ios --scheme 'lootswap_mobile'",
-    "ios:dev": "react-native run-ios --scheme 'lootswap_mobile_development' --simulator='iPhone 14 Pro Max'"
+    "ios:dev": "react-native run-ios --scheme 'lootswap_mobile_development' --simulator='iPhone 14'"
   },
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.5",
