--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-native-pager-view": "^6.1.2",
     "react-native-print": "^0.11.0",
     "react-native-progress": "^5.0.0",
+    "react-native-rate": "^1.2.12",
     "react-native-reanimated": "^2.13.0",
     "react-native-reanimated-carousel": "^3.1.5",
     "react-native-safe-area-context": "^4.4.1",
